Update Dependencies and configure token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 server.port=5000
 
+# JSON Web Token coniguration
 jwt.secret=keep-it-secret
+jwt.token.validity=180000
+
+# Jackson confniguration
+spring.jackson.default-property-inclusion=NON_NULL
