Update JWT token generation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=5000
 
 # JSON Web Token coniguration
-jwt.secret=keep-it-secret
+jwt.secret=XGdxB9RCgG54j8aMQTV1Dyi5HtMOmbR9Pvo4MA4NKRGDvFZ1b
 jwt.token.validity=180000
 
 # Jackson confniguration
 spring.jackson.default-property-inclusion=NON_NULL
+
+spring.main.allow-circular-references=true
