--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ server.port=5000
 jwt.secret=XGdxB9RCgG54j8aMQTV1Dyi5HtMOmbR9Pvo4MA4NKRGDvFZ1b
 jwt.token.validity=180000
 
-# Jackson confniguration
+# Jackson configuration
 spring.jackson.default-property-inclusion=NON_NULL
 
 spring.main.allow-circular-references=true
+
+
