--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!--  Model Mapper -->
+		<dependency>
+	    	<groupId>org.modelmapper</groupId>
+	    	<artifactId>modelmapper</artifactId>
+	    	<version>2.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
