--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=5000
 
 # JSON Web Token coniguration
 jwt.secret=XGdxB9RCgG54j8aMQTV1Dyi5HtMOmbR9Pvo4MA4NKRGDvFZ1b
-jwt.token.validity=180000
+jwt.token.validity=18000000
 
 # Jackson configuration
 spring.jackson.default-property-inclusion=NON_NULL
