--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
 	    	<artifactId>modelmapper</artifactId>
 	    	<version>2.4.5</version>
 		</dependency>
+		
+		<!--  GraphQL dependencies -->
+		<dependency>
+		    <groupId>com.graphql-java</groupId>
+		    <artifactId>graphql-spring-boot-starter</artifactId>
+		    <version>5.0.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.graphql-java</groupId>
+		    <artifactId>graphql-java-tools</artifactId>
+		    <version>5.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
